# Predicting-Road-Accident-Risk

./: .Dockerfile  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  system.env
docs/: ensembling.md  lightgbm.md  linear_regression.md  naive_bayes.md  neural_network.md  xgboost.md
kaggle/: __init__.py  callbacks.py  data_preprocessing.py  lightgbm_tree.py  neural_network.py  offline_predictions.py  pipeline.py  serve_ensemble.py  tuning.py  xgboost_tree.py
kaggle/models/: linear_regression.py  naive_bayes.py  neural_network.py
notebooks/: eda.ipynb
